# mcp_word_office

./: .dockerignore  .dxtignore  .gitignore  .mcpbignore  .pre-commit-config.yaml  CHANGELOG.md  Docker.md  Dockerfile  LICENSE  README.md  TOOLS.md  WARP.md  __init__.py  manifest.json  mcp_server.py  mcp_word.code-workspace  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.windsurf/rules/: rules.md  rulestest.md  tests.md
docs/: MCPB.md  NewImplementation.md  TOOLS.md
docs/implmenatations/: Implementación_1.md
docs/plan/: plan.md
mcp_word_server/: main.py
mcp_word_server/core/: __init__.py  exceptions.py  footnotes.py  styles.py  tables.py  unprotect.py
mcp_word_server/prompts/: __init__.py  prompts.py  register_prompts.py
mcp_word_server/tools/: __init__.py  content_tools.py  document_tools.py  extended_document_tools.py  footnote_tools.py  format_tools.py  protection_tools.py  register_tools.py
mcp_word_server/utils/: __init__.py  document_utils.py  extended_document_utils.py  file_utils.py
mcp_word_server/validation/: __init__.py  document_validators.py
skills/mcp-word-document-workflow/: LICENSE.txt  README.md  SKILL.md
skills/mcp-word-document-workflow/evals/: evals.json
skills/mcp-word-document-workflow/examples/: acta.md  carta.md  informe-universitario.md  propuesta.md  reporte.md  solicitud-formal.md  syllabus.md
skills/mcp-word-document-workflow/reference/: security.md  styles-and-formatting.md  token-optimization.md  tools-patterns.md
skills/mcp-word-document-workflow/templates/: README.md  acta-template.md  carta-template.md  informe-universitario-template.md  propuesta-template.md  reporte-template.md  solicitud-formal-template.md  syllabus-template.md
src/: __init__.py  mcp_server.py
src/mcp_word/: __init__.py  __main__.py  main.py  server.py
src/mcp_word/core/: __init__.py  content.py  document.py  document_context.py  footnotes.py  formatting.py  headers_footers.py  links.py  properties.py  protection.py  styles.py  tables.py
src/mcp_word/exception/: ExceptionTool.py  __init__.py  exception_core.py  exception_tools.py  unprotect.py
src/mcp_word/models/: __init__.py  response_models.py
src/mcp_word/prompts/: __init__.py  prompts.py  register_prompts.py
src/mcp_word/tools/: __init__.py  content_tools.py  document_tools.py  extended_document_tools.py  footnote_tools.py  format_tools.py  header_footer_tools.py  link_tools.py  property_tools.py  protection_tools.py  register_tools.py
src/mcp_word/utils/: __init__.py  document_utils.py  extended_document_utils.py  security.py
src/mcp_word/validation/: __init__.py  document_validators.py
src/word_mcp/: __init__.py  main.py
src/word_mcp/core/: __init__.py  footnotes.py  protection.py  styles.py  tables.py
src/word_mcp/prompts/: __init__.py  prompts.py  register_prompts.py
src/word_mcp/tools/: __init__.py  content_tools.py  document_tools.py  extended_document_tools.py  footnote_tools.py  format_tools.py  protection_tools.py  register_tools.py
src/word_mcp/utils/: __init__.py  document_utils.py  extended_document_utils.py
src/word_mcp/validation/: __init__.py
tests/: conftest.py  test_content_tools.py  test_document_tools.py  test_document_utils.py  test_exception_centralization.py  test_extended_document_tools.py  test_footnote_tools.py  test_format_tools.py  test_header_footer_tools.py  test_link_tools.py  test_property_tools.py  test_response_models.py  test_styles_logic.py  test_validate_docx_decorator.py
