[project]
name = "mcp-office-word"
version = "1.1.0"
description = "MCP server for manipulating Microsoft Word documents"
readme = "README.md"
authors = [
    {name = "LuiccianDev"}
]
license = {text = "MIT"}
keywords = ["mcp", "microsoft-word", "office", "document-processing", "docx"]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "docx2pdf>=0.1.8",
    "mcp[cli]>=1.12.2",
    "msoffcrypto-tool>=5.4.2",
    "python-docx>=1.2.0",
]
[project.urls]
Homepage = "https://github.com/LuiccianDev/mcp_word_office"
Repository = "https://github.com/LuiccianDev/mcp_word_office"
Documentation = "https://github.com/LuiccianDev/mcp_word_office/blob/master/README.md"
"Bug Tracker" = "https://github.com/LuiccianDev/mcp_word_office/issues"
Changelog = "https://github.com/LuiccianDev/mcp_word_office/blob/master/CHANGELOG.md"

dependencies = [
    "docx2pdf>=0.1.8",
    "mcp[cli]>=1.9.0",
    "msoffcrypto-tool>=5.4.2",
    "python-docx>=1.1.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.5",
]

# Configuraci贸n de Black (formateador)
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

# Configuraci贸n de isort (organizar imports)
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

# Configuraci贸n de MyPy (verificador de tipos)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Configuraci贸n de Ruff (linter moderno)
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
asyncio_mode = "auto"
