[project]
name = "mcp-office-word"
version = "1.1.0"
description = "MCP server for manipulating Microsoft Word documents"
readme = "README.md"
authors = [
    {name = "LuiccianDev"}
]
license = {text = "MIT"}
keywords = ["mcp", "microsoft-word", "office", "document-processing", "docx"]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "docx2pdf>=0.1.8",
    "mcp[cli]>=1.12.2",
    "msoffcrypto-tool>=5.4.2",
    "python-docx>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/LuiccianDev/mcp_word_office"
Repository = "https://github.com/LuiccianDev/mcp_word_office"
Documentation = "https://github.com/LuiccianDev/mcp_word_office/blob/master/README.md"
issues = "https://github.com/LuiccianDev/mcp_word_office/issues"
Changelog = "https://github.com/LuiccianDev/mcp_word_office/blob/master/CHANGELOG.md"


[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pillow>=11.3.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.5",
]

[project.scripts]
mcp_word_office = "mcp_word.__main__:main"

[project.entry-points."mcp.servers"]
mcp_word_office = "mcp_word.__main__:main"


[tool.hatch.build.targets.wheel]
packages = ["src/mcp_word"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"